--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <img src="../IMG_1050.jpeg" alt="ME">
+        <img src="IMG_1050.jpeg" alt="ME">
         <h3 class="text-alignment">CONTACT ME AT</h3>
         <ul class="ul-sidebar">
             <li>No: <br>09455381098</li>
